[package]
name = "rust-sokoban"
version = "0.1.0"
authors = ["Valentin Colin <valentin.colin78@gmail.com>"]
edition = "2021"
description = "Sokoban game writing in rust (this project is only useful to help using rust)"
readme = "README.md"
homepage = "https://github.com/ValentinColin/rust-sokoban.git"
repository = "https://github.com/ValentinColin/rust-sokoban.git"
license = "MIT"
licence-file = "LICENSE"
keywords = ["gamedev", "exemple-project"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = {version = "0.0.21", optional = true}
ggez = "0.7"
glam = { version = "0.20.0", features = ["mint"] }
specs = { version = "0.17.0", features = ["specs-derive"] }
itertools = "0.9.0"

[features]
default = []
dev = ["clippy"]
